fix overflow issues

--- a/src/cakes/CakeCard.css
+++ b/src/cakes/CakeCard.css
@@ -41,6 +41,7 @@
 
 .cake-info-dialog-wrapper {
   /* width: 80%; */
+  margin: auto;
 }
 
 .cake-info-dialog-img {
